2007-08-24  Frank Ch. Eigler  <fche@redhat.com>

PR 4899
	* tapsets.cxx (dwflpp::has_single_line_record): Extended,
	abstraction violated.
	(iterate_over_srcfile_lines): Remove exactly line number match
	logic.  Improve error message to offered better-checked alternative
	line numbers.
	(query_srcfile_line): Whoops, pass scope_die down for statement("...")
	probes, to enable $target var processing.

2007-08-24  Frank Ch. Eigler  <fche@redhat.com>

	PR 4899
	* buildok/fortytwo.stp: New test.